<resources>
    <string name="app_name">Login and SignUp Assignment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_zuri_training">Login to Zuri Training</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="S_email">S_Email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_an_account_login">Already having an account? Login</string>
    <string name="succesfully_created_account">create</string>
</resources>